MathExprParser.cs
// $ANTLR 3.2 Sep 23, 2009 12:02:23 MathExpr.g 2015-01-08 11:45:56

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162


  using System.Collections.Generic;
  using System.Globalization;


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;

using IDictionary	= System.Collections.IDictionary;
using Hashtable 	= System.Collections.Hashtable;

using Antlr.Runtime.Tree;

namespace  MathExpr 
{
public partial class MathExprParser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"UNKNOWN", 
		"BLOCK", 
		"PARAMS", 
		"CALL", 
		"IF", 
		"THEN", 
		"ELSE", 
		"FOR", 
		"TO", 
		"WHILE", 
		"DO", 
		"REPEAT", 
		"UNTIL", 
		"BEGIN", 
		"END", 
		"AND", 
		"OR", 
		"NOT", 
		"XOR", 
		"MOD", 
		"IN", 
		"VAR_BLOCK", 
		"PROCEDURE", 
		"FUNCTION", 
		"PROGRAM", 
		"ARRAY", 
		"OF", 
		"TRUE", 
		"FALSE", 
		"WS", 
		"NUMBER", 
		"IDENT", 
		"ADD", 
		"SUB", 
		"MUL", 
		"DIV", 
		"BIT_AND", 
		"BIT_OR", 
		"ASSIGN", 
		"GE", 
		"LE", 
		"NEQUALS", 
		"EQUALS", 
		"GT", 
		"LT", 
		"','", 
		"'('", 
		"')'", 
		"':'", 
		"';'", 
		"'['", 
		"']'", 
		"'.'"
    };

    public const int FUNCTION = 27;
    public const int LT = 48;
    public const int BIT_AND = 40;
    public const int WHILE = 13;
    public const int MOD = 23;
    public const int FOR = 11;
    public const int DO = 14;
    public const int SUB = 37;
    public const int EQUALS = 46;
    public const int NOT = 21;
    public const int AND = 19;
    public const int VAR_BLOCK = 25;
    public const int EOF = -1;
    public const int NEQUALS = 45;
    public const int IF = 8;
    public const int T__55 = 55;
    public const int T__56 = 56;
    public const int T__51 = 51;
    public const int THEN = 9;
    public const int T__52 = 52;
    public const int IN = 24;
    public const int T__53 = 53;
    public const int BIT_OR = 41;
    public const int UNKNOWN = 4;
    public const int T__54 = 54;
    public const int BEGIN = 17;
    public const int IDENT = 35;
    public const int T__50 = 50;
    public const int ARRAY = 29;
    public const int ADD = 36;
    public const int PARAMS = 6;
    public const int GE = 43;
    public const int XOR = 22;
    public const int TO = 12;
    public const int T__49 = 49;
    public const int ELSE = 10;
    public const int NUMBER = 34;
    public const int OF = 30;
    public const int MUL = 38;
    public const int TRUE = 31;
    public const int PROCEDURE = 26;
    public const int WS = 33;
    public const int UNTIL = 16;
    public const int BLOCK = 5;
    public const int OR = 20;
    public const int ASSIGN = 42;
    public const int GT = 47;
    public const int PROGRAM = 28;
    public const int REPEAT = 15;
    public const int CALL = 7;
    public const int DIV = 39;
    public const int END = 18;
    public const int FALSE = 32;
    public const int LE = 44;

    // delegates
    // delegators



        public MathExprParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public MathExprParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();
            this.state.ruleMemo = new Hashtable[70+1];
             
             
        }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return MathExprParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "MathExpr.g"; }
    }


      // number format with decimal separator - '.'
      public static readonly NumberFormatInfo NFI = new NumberFormatInfo();
      
      // identifier values
      private Dictionary<string, IdentDescr> identTable = new Dictionary<string, IdentDescr>();


    public class bool_value_return : ParserRuleReturnScope
    {
        private AstNode tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (AstNode) value; }
        }
    };

    // $ANTLR start "bool_value"
    // MathExpr.g:72:1: bool_value : ( TRUE | FALSE );
    public MathExprParser.bool_value_return bool_value() // throws RecognitionException [1]
    {   
        MathExprParser.bool_value_return retval = new MathExprParser.bool_value_return();
        retval.Start = input.LT(1);
        int bool_value_StartIndex = input.Index();
        AstNode root_0 = null;

        IToken set1 = null;

        AstNode set1_tree=null;

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 1) ) 
    	    {
    	    	return retval; 
    	    }
            // MathExpr.g:72:11: ( TRUE | FALSE )
            // MathExpr.g:
            {
            	root_0 = (AstNode)adaptor.GetNilNode();

            	set1 = (IToken)input.LT(1);
            	if ( (input.LA(1) >= TRUE && input.LA(1) <= FALSE) ) 
            	{
            	    input.Consume();
            	    if ( state.backtracking == 0 ) adaptor.AddChild(root_0, (AstNode)adaptor.Create(set1));
            	    state.errorRecovery = false;state.failed = false;
            	}
            	else 
            	{
            	    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
            	    MismatchedSetException mse = new MismatchedSetException(null,input);
            	    throw mse;
            	}


            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (AstNode)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (AstNode)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 1, bool_value_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "bool_value"

    public class ident_return : ParserRuleReturnScope
    {
        private AstNode tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (AstNode) value; }
        }
    };

    // $ANTLR start "ident"
    // MathExpr.g:94:1: ident : IDENT ;
    public MathExprParser.ident_return ident() // throws RecognitionException [1]
    {   
        MathExprParser.ident_return retval = new MathExprParser.ident_return();
        retval.Start = input.LT(1);
        int ident_StartIndex = input.Index();
        AstNode root_0 = null;

        IToken IDENT2 = null;

        AstNode IDENT2_tree=null;

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 2) ) 
    	    {
    	    	return retval; 
    	    }
            // MathExpr.g:94:6: ( IDENT )
            // MathExpr.g:94:8: IDENT
            {
            	root_0 = (AstNode)adaptor.GetNilNode();

            	IDENT2=(IToken)Match(input,IDENT,FOLLOW_IDENT_in_ident837); if (state.failed) return retval;
            	if ( state.backtracking == 0 )
            	{IDENT2_tree = (AstNode)adaptor.Create(IDENT2);
            		adaptor.AddChild(root_0, IDENT2_tree);
            	}

            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (AstNode)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (AstNode)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 2, ident_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "ident"

    public class params__return : ParserRuleReturnScope
    {
        private AstNode tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (AstNode) value; }
        }
    };

    // $ANTLR start "params_"
    // MathExpr.g:98:1: params_ : ( term ( ',' term )* )? ;
    public MathExprParser.params__return params_() // throws RecognitionException [1]
    {   
        MathExprParser.params__return retval = new MathExprParser.params__return();
        retval.Start = input.LT(1);
        int params__StartIndex = input.Index();
        AstNode root_0 = null;

        IToken char_literal4 = null;
        MathExprParser.term_return term3 = default(MathExprParser.term_return);

        MathExprParser.term_return term5 = default(MathExprParser.term_return);


        AstNode char_literal4_tree=null;

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 3) ) 
    	    {
    	    	return retval; 
    	    }
            // MathExpr.g:98:8: ( ( term ( ',' term )* )? )
            // MathExpr.g:98:10: ( term ( ',' term )* )?
            {
            	root_0 = (AstNode)adaptor.GetNilNode();

            	// MathExpr.g:98:10: ( term ( ',' term )* )?
            	int alt2 = 2;
            	int LA2_0 = input.LA(1);

            	if ( (LA2_0 == NOT || (LA2_0 >= TRUE && LA2_0 <= FALSE) || (LA2_0 >= NUMBER && LA2_0 <= IDENT) || LA2_0 == 50) )
            	{
            	    alt2 = 1;
            	}
            	switch (alt2) 
            	{
            	    case 1 :
            	        // MathExpr.g:98:12: term ( ',' term )*
            	        {
            	        	PushFollow(FOLLOW_term_in_params_850);
            	        	term3 = term();
            	        	state.followingStackPointer--;
            	        	if (state.failed) return retval;
            	        	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, term3.Tree);
            	        	// MathExpr.g:98:17: ( ',' term )*
            	        	do 
            	        	{
            	        	    int alt1 = 2;
            	        	    int LA1_0 = input.LA(1);

            	        	    if ( (LA1_0 == 49) )
            	        	    {
            	        	        alt1 = 1;
            	        	    }


            	        	    switch (alt1) 
            	        		{
            	        			case 1 :
            	        			    // MathExpr.g:98:18: ',' term
            	        			    {
            	        			    	char_literal4=(IToken)Match(input,49,FOLLOW_49_in_params_853); if (state.failed) return retval;
            	        			    	PushFollow(FOLLOW_term_in_params_856);
            	        			    	term5 = term();
            	        			    	state.followingStackPointer--;
            	        			    	if (state.failed) return retval;
            	        			    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, term5.Tree);

            	        			    }
            	        			    break;

            	        			default:
            	        			    goto loop1;
            	        	    }
            	        	} while (true);

            	        	loop1:
            	        		;	// Stops C# compiler whining that label 'loop1' has no statements


            	        }
            	        break;

            	}


            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (AstNode)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (AstNode)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 3, params__StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "params_"

    public class call_return : ParserRuleReturnScope
    {
        private AstNode tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (AstNode) value; }
        }
    };

    // $ANTLR start "call"
    // MathExpr.g:99:1: call : ident '(' params_ ')' -> ^( CALL ident ^( PARAMS params_ ) ) ;
    public MathExprParser.call_return call() // throws RecognitionException [1]
    {   
        MathExprParser.call_return retval = new MathExprParser.call_return();
        retval.Start = input.LT(1);
        int call_StartIndex = input.Index();
        AstNode root_0 = null;

        IToken char_literal7 = null;
        IToken char_literal9 = null;
        MathExprParser.ident_return ident6 = default(MathExprParser.ident_return);

        MathExprParser.params__return params_8 = default(MathExprParser.params__return);


        AstNode char_literal7_tree=null;
        AstNode char_literal9_tree=null;
        RewriteRuleTokenStream stream_51 = new RewriteRuleTokenStream(adaptor,"token 51");
        RewriteRuleTokenStream stream_50 = new RewriteRuleTokenStream(adaptor,"token 50");
        RewriteRuleSubtreeStream stream_ident = new RewriteRuleSubtreeStream(adaptor,"rule ident");
        RewriteRuleSubtreeStream stream_params_ = new RewriteRuleSubtreeStream(adaptor,"rule params_");
        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 4) ) 
    	    {
    	    	return retval; 
    	    }
            // MathExpr.g:99:5: ( ident '(' params_ ')' -> ^( CALL ident ^( PARAMS params_ ) ) )
            // MathExpr.g:99:7: ident '(' params_ ')'
            {
            	PushFollow(FOLLOW_ident_in_call869);
            	ident6 = ident();
            	state.followingStackPointer--;
            	if (state.failed) return retval;
            	if ( (state.backtracking==0) ) stream_ident.Add(ident6.Tree);
            	char_literal7=(IToken)Match(input,50,FOLLOW_50_in_call871); if (state.failed) return retval; 
            	if ( (state.backtracking==0) ) stream_50.Add(char_literal7);

            	PushFollow(FOLLOW_params__in_call873);
            	params_8 = params_();
            	state.followingStackPointer--;
            	if (state.failed) return retval;
            	if ( (state.backtracking==0) ) stream_params_.Add(params_8.Tree);
            	char_literal9=(IToken)Match(input,51,FOLLOW_51_in_call875); if (state.failed) return retval; 
            	if ( (state.backtracking==0) ) stream_51.Add(char_literal9);



            	// AST REWRITE
            	// elements:          ident, params_
            	// token labels:      
            	// rule labels:       retval
            	// token list labels: 
            	// rule list labels:  
            	// wildcard labels: 
            	if ( (state.backtracking==0) ) {
            	retval.Tree = root_0;
            	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

            	root_0 = (AstNode)adaptor.GetNilNode();
            	// 99:30: -> ^( CALL ident ^( PARAMS params_ ) )
            	{
            	    // MathExpr.g:99:33: ^( CALL ident ^( PARAMS params_ ) )
            	    {
            	    AstNode root_1 = (AstNode)adaptor.GetNilNode();
            	    root_1 = (AstNode)adaptor.BecomeRoot((AstNode)adaptor.Create(CALL, "CALL"), root_1);

            	    adaptor.AddChild(root_1, stream_ident.NextTree());
            	    // MathExpr.g:99:46: ^( PARAMS params_ )
            	    {
            	    AstNode root_2 = (AstNode)adaptor.GetNilNode();
            	    root_2 = (AstNode)adaptor.BecomeRoot((AstNode)adaptor.Create(PARAMS, "PARAMS"), root_2);

            	    adaptor.AddChild(root_2, stream_params_.NextTree());

            	    adaptor.AddChild(root_1, root_2);
            	    }

            	    adaptor.AddChild(root_0, root_1);
            	    }

            	}

            	retval.Tree = root_0;retval.Tree = root_0;}
            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (AstNode)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (AstNode)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 4, call_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "call"

    public class num_return : ParserRuleReturnScope
    {
        private AstNode tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (AstNode) value; }
        }
    };

    // $ANTLR start "num"
    // MathExpr.g:101:1: num : NUMBER -> NUMBER[double.Parse($NUMBER.text, NFI)] ;
    public MathExprParser.num_return num() // throws RecognitionException [1]
    {   
        MathExprParser.num_return retval = new MathExprParser.num_return();
        retval.Start = input.LT(1);
        int num_StartIndex = input.Index();
        AstNode root_0 = null;

        IToken NUMBER10 = null;

        AstNode NUMBER10_tree=null;
        RewriteRuleTokenStream stream_NUMBER = new RewriteRuleTokenStream(adaptor,"token NUMBER");

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 5) ) 
    	    {
    	    	return retval; 
    	    }
            // MathExpr.g:101:4: ( NUMBER -> NUMBER[double.Parse($NUMBER.text, NFI)] )
            // MathExpr.g:101:6: NUMBER
            {
            	NUMBER10=(IToken)Match(input,NUMBER,FOLLOW_NUMBER_in_num898); if (state.failed) return retval; 
            	if ( (state.backtracking==0) ) stream_NUMBER.Add(NUMBER10);



            	// AST REWRITE
            	// elements:          NUMBER
            	// token labels:      
            	// rule labels:       retval
            	// token list labels: 
            	// rule list labels:  
            	// wildcard labels: 
            	if ( (state.backtracking==0) ) {
            	retval.Tree = root_0;
            	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

            	root_0 = (AstNode)adaptor.GetNilNode();
            	// 101:13: -> NUMBER[double.Parse($NUMBER.text, NFI)]
            	{
            	    adaptor.AddChild(root_0, new NumAstNode(NUMBER, double.Parse(((NUMBER10 != null) ? NUMBER10.Text : null), NFI)));

            	}

            	retval.Tree = root_0;retval.Tree = root_0;}
            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (AstNode)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (AstNode)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 5, num_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "num"

    public class group_return : ParserRuleReturnScope
    {
        private AstNode tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (AstNode) value; }
        }
    };

    // $ANTLR start "group"
    // MathExpr.g:103:1: group : ( '(' term ')' | bool_value | num | ident | call );
    public MathExprParser.group_return group() // throws RecognitionException [1]
    {   
        MathExprParser.group_return retval = new MathExprParser.group_return();
        retval.Start = input.LT(1);
        int group_StartIndex = input.Index();
        AstNode root_0 = null;

        IToken char_literal11 = null;
        IToken char_literal13 = null;
        MathExprParser.term_return term12 = default(MathExprParser.term_return);

        MathExprParser.bool_value_return bool_value14 = default(MathExprParser.bool_value_return);

        MathExprParser.num_return num15 = default(MathExprParser.num_return);

        MathExprParser.ident_return ident16 = default(MathExprParser.ident_return);

        MathExprParser.call_return call17 = default(MathExprParser.call_return);


        AstNode char_literal11_tree=null;
        AstNode char_literal13_tree=null;

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 6) ) 
    	    {
    	    	return retval; 
    	    }
            // MathExpr.g:103:6: ( '(' term ')' | bool_value | num | ident | call )
            int alt3 = 5;
            switch ( input.LA(1) ) 
            {
            case 50:
            	{
                alt3 = 1;
                }
                break;
            case TRUE:
            case FALSE:
            	{
                alt3 = 2;
                }
                break;
            case NUMBER:
            	{
                alt3 = 3;
                }
                break;
            case IDENT:
            	{
                int LA3_4 = input.LA(2);

                if ( (LA3_4 == EOF || (LA3_4 >= THEN && LA3_4 <= ELSE) || LA3_4 == DO || LA3_4 == UNTIL || (LA3_4 >= END && LA3_4 <= OR) || LA3_4 == MOD || (LA3_4 >= ADD && LA3_4 <= BIT_OR) || (LA3_4 >= GE && LA3_4 <= 49) || LA3_4 == 51 || LA3_4 == 53 || LA3_4 == 55) )
                {
                    alt3 = 4;
                }
                else if ( (LA3_4 == 50) )
                {
                    alt3 = 5;
                }
                else 
                {
                    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
                    NoViableAltException nvae_d3s4 =
                        new NoViableAltException("", 3, 4, input);

                    throw nvae_d3s4;
                }
                }
                break;
            	default:
            	    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
            	    NoViableAltException nvae_d3s0 =
            	        new NoViableAltException("", 3, 0, input);

            	    throw nvae_d3s0;
            }

            switch (alt3) 
            {
                case 1 :
                    // MathExpr.g:104:3: '(' term ')'
                    {
                    	root_0 = (AstNode)adaptor.GetNilNode();

                    	char_literal11=(IToken)Match(input,50,FOLLOW_50_in_group916); if (state.failed) return retval;
                    	PushFollow(FOLLOW_term_in_group919);
                    	term12 = term();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, term12.Tree);
                    	char_literal13=(IToken)Match(input,51,FOLLOW_51_in_group921); if (state.failed) return retval;

                    }
                    break;
                case 2 :
                    // MathExpr.g:105:3: bool_value
                    {
                    	root_0 = (AstNode)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_bool_value_in_group926);
                    	bool_value14 = bool_value();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, bool_value14.Tree);

                    }
                    break;
                case 3 :
                    // MathExpr.g:106:3: num
                    {
                    	root_0 = (AstNode)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_num_in_group930);
                    	num15 = num();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, num15.Tree);

                    }
                    break;
                case 4 :
                    // MathExpr.g:107:3: ident
                    {
                    	root_0 = (AstNode)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_ident_in_group934);
                    	ident16 = ident();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, ident16.Tree);

                    }
                    break;
                case 5 :
                    // MathExpr.g:108:3: call
                    {
                    	root_0 = (AstNode)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_call_in_group938);
                    	call17 = call();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, call17.Tree);

                    }
                    break;

            }
            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (AstNode)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (AstNode)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 6, group_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "group"

    public class var_block_return : ParserRuleReturnScope
    {
        private AstNode tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (AstNode) value; }
        }
    };

    // $ANTLR start "var_block"
    // MathExpr.g:111:1: var_block : VAR_BLOCK ( var_declaration )* ;
    public MathExprParser.var_block_return var_block() // throws RecognitionException [1]
    {   
        MathExprParser.var_block_return retval = new MathExprParser.var_block_return();
        retval.Start = input.LT(1);
        int var_block_StartIndex = input.Index();
        AstNode root_0 = null;

        IToken VAR_BLOCK18 = null;
        MathExprParser.var_declaration_return var_declaration19 = default(MathExprParser.var_declaration_return);


        AstNode VAR_BLOCK18_tree=null;

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 7) ) 
    	    {
    	    	return retval; 
    	    }
            // MathExpr.g:111:11: ( VAR_BLOCK ( var_declaration )* )
            // MathExpr.g:111:13: VAR_BLOCK ( var_declaration )*
            {
            	root_0 = (AstNode)adaptor.GetNilNode();

            	VAR_BLOCK18=(IToken)Match(input,VAR_BLOCK,FOLLOW_VAR_BLOCK_in_var_block947); if (state.failed) return retval;
            	if ( state.backtracking == 0 )
            	{VAR_BLOCK18_tree = (AstNode)adaptor.Create(VAR_BLOCK18);
            		root_0 = (AstNode)adaptor.BecomeRoot(VAR_BLOCK18_tree, root_0);
            	}
            	// MathExpr.g:111:24: ( var_declaration )*
            	do 
            	{
            	    int alt4 = 2;
            	    int LA4_0 = input.LA(1);

            	    if ( (LA4_0 == IDENT) )
            	    {
            	        alt4 = 1;
            	    }


            	    switch (alt4) 
            		{
            			case 1 :
            			    // MathExpr.g:111:25: var_declaration
            			    {
            			    	PushFollow(FOLLOW_var_declaration_in_var_block951);
            			    	var_declaration19 = var_declaration();
            			    	state.followingStackPointer--;
            			    	if (state.failed) return retval;
            			    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, var_declaration19.Tree);

            			    }
            			    break;

            			default:
            			    goto loop4;
            	    }
            	} while (true);

            	loop4:
            		;	// Stops C# compiler whining that label 'loop4' has no statements


            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (AstNode)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (AstNode)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 7, var_block_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "var_block"

    public class var_declaration_return : ParserRuleReturnScope
    {
        private AstNode tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (AstNode) value; }
        }
    };

    // $ANTLR start "var_declaration"
    // MathExpr.g:112:1: var_declaration : ident ( ',' ident )* ':' var_type ';' ;
    public MathExprParser.var_declaration_return var_declaration() // throws RecognitionException [1]
    {   
        MathExprParser.var_declaration_return retval = new MathExprParser.var_declaration_return();
        retval.Start = input.LT(1);
        int var_declaration_StartIndex = input.Index();
        AstNode root_0 = null;

        IToken char_literal21 = null;
        IToken char_literal23 = null;
        IToken char_literal25 = null;
        MathExprParser.ident_return ident20 = default(MathExprParser.ident_return);

        MathExprParser.ident_return ident22 = default(MathExprParser.ident_return);

        MathExprParser.var_type_return var_type24 = default(MathExprParser.var_type_return);


        AstNode char_literal21_tree=null;
        AstNode char_literal23_tree=null;
        AstNode char_literal25_tree=null;

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 8) ) 
    	    {
    	    	return retval; 
    	    }
            // MathExpr.g:112:16: ( ident ( ',' ident )* ':' var_type ';' )
            // MathExpr.g:112:18: ident ( ',' ident )* ':' var_type ';'
            {
            	root_0 = (AstNode)adaptor.GetNilNode();
